updated  markup for viewTasks(). Meaningful, comprehensive & well-tied with script.js changes

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>To-Do List</title>
 </head>
 <body>
     <h2><i>Tasks are currently hard coded in file, for testing reasons</i></h2>
     <section class="tasks">
-        <p>
-        </p>
+        <!-- This is where JS loads tasks-->
     </section>
     <script src="script.js"></script>   
 </body>
