--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/6dbe889119.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css">   
     <title>To-Do List</title>
 </head>
 <body>
